--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,8 +2,9 @@
   display: none;
 }
 
-button {
-  background-color: rgba(0, 0, 0, 0.5);
-  outline: none;
-  padding: 10px 20px;
+.background {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
 }
