--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -6,5 +6,65 @@
   width: 100%;
   height: 100vh;
   object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
   z-index: -1;
+}
+
+.main-section {
+  margin-top: 50px;
+  color: white;
+}
+
+.main-page-box {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.music-button-set {
+  display: flex;
+}
+
+.music-button-set button {
+  margin-right: 10px;
+}
+
+/* 프로필이미지 */
+
+.main-section .main-profile img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.write-box {
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 20px;
+}
+
+.write-box2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.write-box + .write-box {
+  border-top: none;
+}
+
+.write-img {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.write-box:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.main-box {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
