--- a/src/styles/Public.css
+++ b/src/styles/Public.css
@@ -8,6 +8,7 @@ button {
   background-color: rgba(0, 0, 0, 0.5);
   outline: none;
   padding: 5px 20px;
+  color: whitesmoke;
 }
 
 h2 {
@@ -34,7 +35,7 @@ a:hover {
 }
 
 input {
-  width: 500px;
+  width: 250px;
   height: 40px;
   margin-bottom: 12px;
   border: none;
@@ -52,9 +53,9 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 400px;
-  max-width: 400px;
-  height: 60vh;
+  width: 40%;
+  max-width: 40%;
+  height: 80vh;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   backdrop-filter: blur(3px);
